--- a/hands-on_lab/Properties/launchSettings.json
+++ b/hands-on_lab/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "swagger",
+      "launchUrl": "hajo.html",
       "applicationUrl": "https://localhost:7014;http://localhost:5241",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
